syntax = "proto3";

package placement;

service Placement {
    rpc getPlacement (PlacementRequest) returns (PlacementReply);
}

enum IndexKind {
    PRIMARY = 0;
    REPLICA = 1;
}

message PlacementRequest {
    string index = 1;
    IndexKind kind = 2;
}

message PlacementReply {
    string node = 1;
    IndexKind kind = 2;
}